--- a/index.html
+++ b/index.html
@@ -22,9 +22,24 @@
     crossorigin="anonymous">
   <!-- Materialize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="src/styles.css">
 </head>
 
 <body>
+  <div class="container-fluid">
+    <header className="header">
+      <img src="src/img/banner.png" alt="banner">
+      <div className="header-btn">
+        <a class="waves-effect waves-light btn">ABOUT ME</a>
+        <a class="waves-effect waves-light btn">SKILLS</a>
+        <a class="waves-effect waves-light btn">PROJECTS</a>
+        <a class="waves-effect waves-light btn">CONTACT</a>
+      </div>
+      <img src="src/img/logo.png" alt="">
+    </header>
+
+  </div>
+
 
 
 
