--- a/index.html
+++ b/index.html
@@ -80,50 +80,46 @@
       <!-- Tools -->
       <section id="skillsSection" class="skills" data-aos="fade-up">
         <h3>TOOLS</h3>
-        <div class="row">
-          <div class="icon-container col m2">
+          <div class="icon-container col s3 m2">
             <img src="src/img/HTML.png" alt="">
             <p>HTML 5</p>
           </div>
-          <div class="icon-container col m2">
+          <div class="icon-container col s3 m2">
             <img src="src/img/CSS.png" alt="">
             <p>CSS 3</p>
           </div>
-          <div class="icon-container col m2">
+          <div class="icon-container col offset-s3 m2">
             <img src="src/img/JavaScript.png" alt="">
             <p>JavaScript</p>
           </div>
-          <div class="icon-container col m2">
+          <div class="icon-container col s3 m2">
             <img src="src/img/Bootstrap.png" alt="">
             <p>Bootstrap</p>
           </div>
-          <div class="icon-container col m2">
+          <div class="icon-container col s3 m2">
             <img src="src/img/materialize.png" alt="">
             <p>Materialize</p>
           </div>
-        </div>
-        <div class="row">
-          <div class="icon-container col m2">
+          <div class="icon-container col s3 m2">
             <img src="src/img/Node-JS.png" alt="">
             <p>NodeJS</p>
           </div>
-          <div class="icon-container col m2">
+          <div class="icon-container col s3 m2">
             <img src="src/img/Npm.png" alt="">
             <p>NPM</p>
           </div>
-          <div class="icon-container col m2">
+          <div class="icon-container col s3 m2">
             <img src="src/img/React.png" alt="">
             <p>ReactJS</p>
           </div>
-          <div class="icon-container col m2">
+          <div class="icon-container col s3 m2">
             <img src="src/img/firebase.png" alt="">
             <p>Firebase</p>
           </div>
-          <div class="icon-container col m2">
+          <div class="icon-container col s3 m2">
             <img src="src/img/GitHub-Icon.png" alt="">
             <p>Github</p>
           </div>
-        </div>
       </section>
 
       <!-- Projects -->
