--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <h3>PROYECTOS</h3>
         <div class="row">
           <!-- FoodMap -->
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4" data-aos="fade-up">
             <figure class="snip1527">
               <div class="image"><img src="src/img/foodmap.jpeg" alt="foodmap caption" /></div>
               <figcaption>
@@ -141,7 +141,7 @@
             </figure>
           </div>
           <!-- IF Visitors -->
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4" data-aos="fade-up">
             <figure class="snip1527">
               <div class="image"><img src="src/img/ifvisitors.jpeg" alt="pr-sample24" /></div>
               <figcaption>
@@ -155,7 +155,7 @@
             </figure>
           </div>
           <!-- ConectApp -->
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4" data-aos="fade-up">
             <figure class="snip1527">
               <div class="image"><img src="src/img/conectapp.jpeg" alt="pr-sample25" /></div>
               <figcaption>
