--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </section>
 
       <!-- Projects -->
-      <section id="projectsSection" class="projects" data-aos="fade-up">
+      <section id="projectsSection" class="projects container" data-aos="fade-up">
         <h3>PROYECTOS</h3>
         <div class="row">
           <!-- FoodMap -->
