detalles muchos detalles

--- a/index.html
+++ b/index.html
@@ -80,43 +80,43 @@
       <!-- Tools -->
       <section id="skillsSection" class="skills" data-aos="fade-up">
         <h3>TOOLS</h3>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="fade-up">
             <img src="src/img/HTML.png" alt="">
             <p>HTML 5</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="fade-up">
             <img src="src/img/CSS.png" alt="">
             <p>CSS 3</p>
           </div>
-          <div class="icon-container col offset-s3 m2">
+          <div class="icon-container col offset-s3 m2" data-aos="fade-up">
             <img src="src/img/JavaScript.png" alt="">
             <p>JavaScript</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="fade-up">
             <img src="src/img/Bootstrap.png" alt="">
             <p>Bootstrap</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="fade-up">
             <img src="src/img/materialize.png" alt="">
             <p>Materialize</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="fade-up">
             <img src="src/img/Node-JS.png" alt="">
             <p>NodeJS</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="fade-up">
             <img src="src/img/Npm.png" alt="">
             <p>NPM</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="fade-up">
             <img src="src/img/React.png" alt="">
             <p>ReactJS</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="fade-up">
             <img src="src/img/firebase.png" alt="">
             <p>Firebase</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="fade-up">
             <img src="src/img/GitHub-Icon.png" alt="">
             <p>Github</p>
           </div>
@@ -146,8 +146,7 @@
               <div class="image"><img src="src/img/ifvisitors.jpeg" alt="pr-sample24" /></div>
               <figcaption>
                 <h4>IF Visitors</h4>
-                <p>Aplicación que registra visitantes del edificio IF Blanco para mejorar la seguridad en el acceso al
-                  recinto.</p>
+                <p>Aplicación que registra visitantes del edificio IF Blanco para mejorar la seguridad en el acceso al recinto.</p>
                 <a href="https://registro-visitantes.firebaseapp.com/" target="_blank" class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/scl-2018-01-ProyectoFinalCore" target="_blank" class="waves-effect waves-light btn">CODE</a>
               </figcaption>
@@ -159,9 +158,8 @@
             <figure class="snip1527">
               <div class="image"><img src="src/img/conectapp.jpeg" alt="pr-sample25" /></div>
               <figcaption>
-                <h4>ConectApp Alumnos</h4>
-                <p>Red social enfocada en la comunidad escolar, con el propósito de mejorar la comunicación entre
-                  almunos y sus profesores.</p>
+                <h4>ConectApp</h4>
+                <p>Red social enfocada en la comunidad escolar que mejora la comunicación entre alumnos y sus profesores.</p>
                 <a href="https://social-network-d7373.firebaseapp.com/" target="_blank" class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/scl-2018-05-bc-core-am-socialnetwork" target="_blank" class="btn">CODE</a>
               </figcaption>
