--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       <!-- About Me -->
       <article class="about">
         <h3>About Me</h3>
-        <div class="row">
-          <section class="image">
+        <div class="row col-sm-12">
+          <section class="image col-sm-4">
             <img src="src/img/mini-logo.png" alt="mini-logo" class="mini-logo">
           </section>
-          <section class="info">
+          <section class="info col-sm-7">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis commodo nulla. Sed pulvinar est dolor, ut placerat nibh luctus ut. Proin hendrerit lectus at erat ornare maximus. Fusce eget urna interdum, dignissim orci a, posuere lacus. Mauris id odio elementum augue porta eleifend. Sed quam erat, efficitur in ipsum at, sagittis molestie nunc. Nunc ultrices, ante consectetur hendrerit facilisis, massa est rhoncus dui, non pretium diam leo placerat nibh.
               Phasellus laoreet elit in massa tempus, non finibus risus mollis. Maecenas nulla odio, placerat ac molestie vel, congue ac ligula. Proin gravida quam quis nisi bibendum facilisis. In at maximus mi, at porttitor nibh. Aenean in arcu efficitur purus lacinia vehicula. Vestibulum ante augue, vulputate vel erat et, cursus rhoncus metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut luctus at lorem ut consequat. Mauris id dignissim sapien, at posuere turpis. Nulla a lacus vestibulum, euismod tortor nec, vestibulum orci. Vestibulum malesuada odio purus, a convallis metus molestie sit amet. Cras volutpat tellus arcu, eget accumsan ante posuere lobortis. Duis ac tempus lacus, ac rutrum neque. Phasellus a velit hendrerit, vulputate dolor vel, iaculis elit. Suspendisse potenti. Aliquam eu cursus augue.
