--- a/index.html
+++ b/index.html
@@ -82,43 +82,43 @@
       <div id="skillsSection" class="topper"></div>
       <section  class="skills" data-aos="fade-up">
         <h3>TOOLS</h3>
-          <div class="icon-container col s3 m2" data-aos="fade-up">
+          <div class="icon-container col s3 m2">
             <img src="src/img/HTML.png" alt="">
             <p>HTML 5</p>
           </div>
-          <div class="icon-container col s3 m2" data-aos="fade-up">
+          <div class="icon-container col s3 m2">
             <img src="src/img/CSS.png" alt="">
             <p>CSS 3</p>
           </div>
-          <div class="icon-container col offset-s3 m2" data-aos="fade-up">
+          <div class="icon-container col offset-s3 m2">
             <img src="src/img/JavaScript.png" alt="">
             <p>JavaScript</p>
           </div>
-          <div class="icon-container col s3 m2" data-aos="fade-up">
+          <div class="icon-container col s3 m2">
             <img src="src/img/Bootstrap.png" alt="">
             <p>Bootstrap</p>
           </div>
-          <div class="icon-container col s3 m2" data-aos="fade-up">
+          <div class="icon-container col s3 m2">
             <img src="src/img/materialize.png" alt="">
             <p>Materialize</p>
           </div>
-          <div class="icon-container col s3 m2" data-aos="fade-up">
+          <div class="icon-container col s3 m2">
             <img src="src/img/Node-JS.png" alt="">
             <p>NodeJS</p>
           </div>
-          <div class="icon-container col s3 m2" data-aos="fade-up">
+          <div class="icon-container col s3 m2">
             <img src="src/img/Npm.png" alt="">
             <p>NPM</p>
           </div>
-          <div class="icon-container col s3 m2" data-aos="fade-up">
+          <div class="icon-container col s3 m2">
             <img src="src/img/React.png" alt="">
             <p>ReactJS</p>
           </div>
-          <div class="icon-container col s3 m2" data-aos="fade-up">
+          <div class="icon-container col s3 m2">
             <img src="src/img/firebase.png" alt="">
             <p>Firebase</p>
           </div>
-          <div class="icon-container col s3 m2" data-aos="fade-up">
+          <div class="icon-container col s3 m2">
             <img src="src/img/GitHub-Icon.png" alt="">
             <p>Github</p>
           </div>
@@ -130,7 +130,7 @@
         <h3>PROYECTOS</h3>
         <div class="row">
           <!-- FoodMap -->
-          <div class="col s12 m6 l4" data-aos="fade-up">
+          <div class="col s12 m6 l4">
             <figure class="snip1527">
               <div class="image"><img src="src/img/foodmap.jpeg" alt="foodmap caption" /></div>
               <figcaption>
@@ -144,7 +144,7 @@
             </figure>
           </div>
           <!-- IF Visitors -->
-          <div class="col s12 m6 l4" data-aos="fade-up">
+          <div class="col s12 m6 l4">
             <figure class="snip1527">
               <div class="image"><img src="src/img/ifvisitors.jpeg" alt="pr-sample24" /></div>
               <figcaption>
@@ -157,7 +157,7 @@
             </figure>
           </div>
           <!-- ConectApp -->
-          <div class="col s12 m6 l4" data-aos="fade-up">
+          <div class="col s12 m6 l4">
             <figure class="snip1527">
               <div class="image"><img src="src/img/conectapp.jpeg" alt="pr-sample25" /></div>
               <figcaption>
