--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 
     <div class="main">
       <!-- About Me -->
-      <div id="aboutSection" class="topper"></div>
-      <section class="about" data-aos="fade-up">
+      <div id="aboutSection" class="topper" data-aos="fade-up"></div>
+      <section class="about">
         <h3 >ABOUT</h>
         <div class="row">
-          <div class="image col s12 m5" data-aos="fade-right">
+          <div class="image col s12 m5" data-aos="zoom-in" data-aos-duration="1500">
             <figure class="snip1581 mini-logo">
               <img src="src/img/profile.jpg" alt="profile-picture"/>
             </figure>
           </div>
-          <div class="info col s12 m6" data-aos="fade-left">
+          <div class="info col s12 m6" data-aos="zoom-in" data-aos-duration="1500">
             <p>
               Front-End Developer enfocada en el desarrollo de páginas y aplicaciones web de calidad, dinámicas y con
               un alto enfoque en el usuario final. Busco combinar las mejores herramientas digitales de acuerdo a los
@@ -82,43 +82,43 @@
       <div id="skillsSection" class="topper"></div>
       <section  class="skills" data-aos="fade-up">
         <h3>TOOLS</h3>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/HTML.png" alt="">
             <p>HTML 5</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/CSS.png" alt="">
             <p>CSS 3</p>
           </div>
-          <div class="icon-container col offset-s3 m2">
+          <div class="icon-container col offset-s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/JavaScript.png" alt="">
             <p>JavaScript</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/Bootstrap.png" alt="">
             <p>Bootstrap</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/materialize.png" alt="">
             <p>Materialize</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/Node-JS.png" alt="">
             <p>NodeJS</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/Npm.png" alt="">
             <p>NPM</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/React.png" alt="">
             <p>ReactJS</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/firebase.png" alt="">
             <p>Firebase</p>
           </div>
-          <div class="icon-container col s3 m2">
+          <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/GitHub-Icon.png" alt="">
             <p>Github</p>
           </div>
@@ -130,7 +130,7 @@
         <h3>PROYECTOS</h3>
         <div class="row">
           <!-- FoodMap -->
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4" data-aos="zoom-in" data-aos-duration="1500">
             <figure class="snip1527">
               <div class="image"><img src="src/img/foodmap.jpeg" alt="foodmap caption" /></div>
               <figcaption>
@@ -144,7 +144,7 @@
             </figure>
           </div>
           <!-- IF Visitors -->
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4" data-aos="zoom-in" data-aos-duration="1500">
             <figure class="snip1527">
               <div class="image"><img src="src/img/ifvisitors.jpeg" alt="pr-sample24" /></div>
               <figcaption>
@@ -157,7 +157,7 @@
             </figure>
           </div>
           <!-- ConectApp -->
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4" data-aos="zoom-in" data-aos-duration="1500">
             <figure class="snip1527">
               <div class="image"><img src="src/img/conectapp.jpeg" alt="pr-sample25" /></div>
               <figcaption>
