aguegué más proyectos!

--- a/index.html
+++ b/index.html
@@ -130,13 +130,12 @@
         <h3>PROYECTOS</h3>
         <div class="row">
           <!-- FoodMap -->
-          <div class="col s12 m6 l4" data-aos="zoom-in" data-aos-duration="1500">
+          <div class="col s12 m4 l4" data-aos="zoom-in" data-aos-duration="1500">
             <figure class="snip1527">
               <div class="image"><img src="src/img/foodmap.jpeg" alt="foodmap caption" /></div>
               <figcaption>
                 <h4>FOOD MAP</h4>
-                <p>Web-app que utiliza Google Maps para buscar lugares de comida con geolocalización y preferencias
-                  personales.</p>
+                <p>App que utiliza Google Maps para buscar lugares de comida con geolocalización y preferencias personales.</p>
                 <a href="https://elizabethvegam.github.io/scl-2018-01-foodmap/" target="_blank" class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/scl-2018-01-foodmap" target="_blank" class="waves-effect waves-light btn">CODE</a>
               </figcaption>
@@ -144,12 +143,12 @@
             </figure>
           </div>
           <!-- IF Visitors -->
-          <div class="col s12 m6 l4" data-aos="zoom-in" data-aos-duration="1500">
+          <div class="col s12 m4 l4" data-aos="zoom-in" data-aos-duration="1500">
             <figure class="snip1527">
               <div class="image"><img src="src/img/ifvisitors.jpeg" alt="pr-sample24" /></div>
               <figcaption>
                 <h4>IF Visitors</h4>
-                <p>Aplicación que registra visitantes del edificio IF Blanco para mejorar la seguridad en el acceso al recinto.</p>
+                <p>App que registra visitantes del edificio IF Blanco para mejorar la seguridad en el acceso al recinto.</p>
                 <a href="https://registro-visitantes.firebaseapp.com/" target="_blank" class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/scl-2018-01-ProyectoFinalCore" target="_blank" class="waves-effect waves-light btn">CODE</a>
               </figcaption>
@@ -157,7 +156,7 @@
             </figure>
           </div>
           <!-- ConectApp -->
-          <div class="col s12 m6 l4" data-aos="zoom-in" data-aos-duration="1500">
+          <div class="col s12 m4 l4" data-aos="zoom-in" data-aos-duration="1500">
             <figure class="snip1527">
               <div class="image"><img src="src/img/conectapp.jpeg" alt="pr-sample25" /></div>
               <figcaption>
@@ -165,6 +164,32 @@
                 <p>Red social enfocada en la comunidad escolar que mejora la comunicación entre alumnos y sus profesores.</p>
                 <a href="https://social-network-d7373.firebaseapp.com/" target="_blank" class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/scl-2018-05-bc-core-am-socialnetwork" target="_blank" class="btn">CODE</a>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="row">
+          <!-- Md-Links -->
+          <div class="col s12 m4 l4" data-aos="zoom-in" data-aos-duration="1500">
+            <figure class="snip1527">
+              <div class="image"><img src="src/img/md-links.jpg" alt="pr-sample25" /></div>
+              <figcaption>
+                <h4>MD-Links</h4>
+                <p>Pequeña librería que analiza archivos de tipo .md para verificar los links que contengan y entregar algunas estadísticas.</p>
+                <a href="https://www.npmjs.com/package/theraven-md-links" target="_blank" class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/scl-2018-01-FE-markdown" target="_blank" class="btn">CODE</a>
+              </figcaption>
+            </figure>
+          </div>
+          <!-- Pinterest -->
+          <div class="col s12 m4 l4" data-aos="zoom-in" data-aos-duration="1500">
+            <figure class="snip1527">
+              <div class="image"><img src="src/img/pinterest-react.jpg" alt="pr-sample25" /></div>
+              <figcaption>
+                <h4>Pinterest</h4>
+                <p>Reto desarrollado en ReactJs que replica la página de inicio de Pinterest desktop</p>
+                <a href="https://elizabethvegam.github.io/pinterest-react/" target="_blank" class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/pinterest-react" target="_blank" class="btn">CODE</a>
               </figcaption>
             </figure>
           </div>
