--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- About Me -->
       <div id="aboutSection" class="topper" data-aos="fade-up"></div>
       <section class="about">
-        <h3 >ABOUT</h>
+        <h3>SOBRE MÍ</h>
         <div class="row">
           <div class="image col s12 m5" data-aos="zoom-in" data-aos-duration="1500">
             <figure class="snip1581 mini-logo">
